--- a/wp-content/themes/understrap-child/sass/theme/partials/_agile.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_agile.scss
@@ -1,6 +1,6 @@
 .vision{
   background: $black;
-  color: $offwhite;
+  color: $off-white;
   display: flex;
   flex-wrap: wrap;
   padding: 16% 8%;
