--- a/wp-content/themes/understrap-child/sass/theme/partials/_background_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_background_styles.scss
@@ -299,7 +299,7 @@ background: #30343F;
   flex: 0 0 auto;
   flex-wrap: wrap;
   padding: 7%;
-  background: $offwhite;
+  background: $off-white;
 @include vr($margin-bottom: 3);
 }
 .categories__section-header{
