--- a/wp-content/themes/understrap-child/sass/theme/partials/_graphics_and_artwork_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_graphics_and_artwork_styles.scss
@@ -478,7 +478,7 @@ stroke: none;
 
   .diagram__end2end{
     .cls-1, .cls-2{
-        fill: $offwhite;
+        fill: $off-white;
     }
   }
 
@@ -514,7 +514,7 @@ svg.chev--dwn{
 }
 
 .proof-quals .cls-1{
-fill: $offwhite;
+fill: $off-white;
 }
 
 // .arrow-up-svg{
