--- a/wp-content/themes/understrap-child/sass/theme/partials/_justification_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_justification_styles.scss
@@ -130,11 +130,11 @@ width: 300%;
   // background: lighten($color: $primary, $amount: 5%);
   width: 100%;
   padding: 16% 5%;
-  background: $offwhite;
+  background: $off-white;
 }
 
 .value-substance__article--background{
-background: $offwhite;
+background: $off-white;
 }
 
 .header-copy--objectives-diagram{
