--- a/wp-content/themes/understrap-child/sass/theme/partials/_perspective.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_perspective.scss
@@ -1,8 +1,8 @@
 .article.perspective {
-  background: $offwhite;
+  background: $off-white;
   @include az-subtle();
   position: relative;
-  // color: $offwhite;
+  // color: $off-white;
   padding: 16% 8%;
 @include mq('desktop'){
   max-width: 50%;
