--- a/wp-content/themes/understrap-child/sass/theme/partials/_services_styles.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_services_styles.scss
@@ -190,12 +190,12 @@
 
 .expertise__section-head {
   @include vr($padding-bottom: 6);
-  background: $offwhite;
+  background: $off-white;
 
   @include mq('desktop') {
     margin-top: 0;
     margin-bottom: 0;
-    background: $offwhite;
+    background: $off-white;
     padding: 16% 16% 0 16%;
     width: 100%;
     max-width: 100%;
@@ -269,7 +269,7 @@
 .expertise__article-wrapper {}
 
 .expertise__intro {
-  background: $offwhite;
+  background: $off-white;
 
   @include mq('desktop') {
     width: 83%;
@@ -1780,7 +1780,7 @@ li.expertise__carousel--list-divider {
 
 .article.how-i-communicate {
   @include mq('tablet') {
-    background: $offwhite;
+    background: $off-white;
     @include vr($margin-top: 1);
   }
 
@@ -1996,7 +1996,7 @@ li.expertise__carousel--list-divider {
 
 .article.how-i-operate {
   @include mq('tablet') {
-    background: $offwhite;
+    background: $off-white;
     @include vr($margin-top: 1);
   }
 
@@ -2319,7 +2319,7 @@ li.expertise__carousel--list-divider {
 
 // @include mq('tablet'){
 //   .article.how-i-communicate {
-// background: $offwhite;
+// background: $off-white;
 // @include vr($margin-top: 1);
 //     .pagination {
 //     }
@@ -2585,7 +2585,7 @@ li.expertise__carousel--list-divider {
   //   padding: 0;
   // }
   @include mq('desktop') {
-    background: $offwhite;
+    background: $off-white;
   }
 
   .flex-container {
@@ -2658,7 +2658,7 @@ li.expertise__carousel--list-divider {
   @include mq('desktop') {
     width: 100%;
     max-width: 100%;
-    background: $offwhite;
+    background: $off-white;
     color: $black;
   }
 
@@ -2683,7 +2683,7 @@ li.expertise__carousel--list-divider {
   @include mq('desktop') {
     width: 100%;
     color: $black;
-    background: $offwhite;
+    background: $off-white;
     padding: 4% 2%;
     box-shadow: none;
   }
@@ -2698,7 +2698,7 @@ li.expertise__carousel--list-divider {
   //   padding: 0;
   // }
   @include mq('desktop') {
-    background: $offwhite;
+    background: $off-white;
   }
 
   .flex-container {
@@ -2764,7 +2764,7 @@ li.expertise__carousel--list-divider {
   @include mq('desktop') {
     width: 100%;
     max-width: 100%;
-    background: $offwhite;
+    background: $off-white;
     color: $black;
   }
 
@@ -2789,7 +2789,7 @@ li.expertise__carousel--list-divider {
   @include mq('desktop') {
     width: 100%;
     color: $black;
-    background: $offwhite;
+    background: $off-white;
     padding: 4% 2%;
     box-shadow: none;
   }
