--- a/wp-content/themes/understrap-child/sass/child-theme.scss
+++ b/wp-content/themes/understrap-child/sass/child-theme.scss
@@ -59,6 +59,8 @@
 @import "theme/partials/perspective";
 @import "theme/partials/agile";
 @import "theme/partials/beliefs";
+@import "theme/partials/focus";
+@import "theme/partials/flexible";
 @import"theme/partials/justification_styles";
 @import "theme/partials/style_tweaks";
 
