--- a/wp-content/themes/understrap-child/sass/theme/partials/_flexible.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/_flexible.scss
@@ -1,19 +1,23 @@
 .article__flexible {
   position: relative;
-  background: $black;
+  background: $white;
   @include vr($margin: .5 0);
-  @include mq('tablet'){
+
+  @include mq('tablet') {
     @include vr($margin: 1, $padding: 1);
     @include light-shadow();
 
   }
 
   .flex-container {
-    color: $white;
-@include mq('desktop'){
-  display: flex;
-  flex-wrap: wrap;
-}
+    color: $black;
+
+    @include mq('desktop') {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+
     .flex-item__a {
       position: relative;
       width: 100%;
@@ -22,18 +26,20 @@
       @include mq('tablet') {
         height: 80em;
       }
-      @include mq('desktop'){
+
+      @include mq('desktop') {
         display: flex;
-        flex: 1.5 1 50%;
-        max-width: 83%;
+        flex: 1 1 36%;
+        max-width: 36%;
         width: unset;
+
       }
 
       .title {
         @include sm__title();
         @include ultra();
         @include vr($line-height: 4);
-        // color: $accent;
+        color: $white;
         // @include ultra(); 
         position: absolute;
         transform: translateY(-50%);
@@ -65,7 +71,8 @@
           flex: 0 0 0;
           top: unset;
           width: 64%;
-          br{
+
+          br {
             display: none;
           }
         }
@@ -88,9 +95,18 @@
         top: 0;
         right: 0;
         transform: scaleX(-1);
+
+        @include mq('tablet-wide') {
+          width: 100%;
+          bottom: -28%;
+
+        }
+@include mq('desktop'){
+        width: 151%;
+    bottom: -28%;
+}
       }
     }
-
 
     .flex-item__b {
       display: flex;
@@ -99,53 +115,73 @@
       @include vr($padding: 2);
 
       @include mq('tablet') {
-@include vr($padding: 4 2 9 2);
-        .header, .copy__container {
+        @include vr($padding: 4 2 9 2);
+
+        .header,
+        .copy__container {
           width: 64%;
-          }
-        @include mq('tablet-wide'){
+        }
+
+        @include mq('tablet-wide') {
           @include vr($padding-bottom: 1);
         }
 
-        }
-        @include mq('desktop'){
-          .header, .copy__container {
-            width: 83%;
-            }
-         
+      }
+
+      @include mq('desktop') {
+
+        
+        display: flex;
+        flex: 1 1 auto;
+        max-width: 64%;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+flex-wrap: wrap;
+      }
+
+      .header,
+      .copy__container {
+       @include mq('desktop'){
+        width: 83%;
+       }
+      }
+
+
+
+      .header {
+        @include mq('desktop') {
+          flex: 0 1 auto;
+          min-height: 6em;
           display: flex;
-          flex: 1 1 auto;
-          max-width: 27%;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
         }
-        .header{
-          @include mq('desktop'){
-            flex: 0 1 auto;
-            min-height: 20em;
-          display: flex;
-          }
+      }
+
+      .headline {
+        text-transform: capitalize;
+        // color: $accent;
+        @include headline__sm();
+        font-weight: 600;
+
+        @include mq('tablet') {
+          @include headline__item();
         }
-        .headline {
-          text-transform: lowercase;
-          // color: $accent;
+
+        @include mq('desktop') {
+          @include vr($line-height: 3);
           @include headline__sm();
 
-          @include mq('tablet') {
-            @include headline__item();
-          }
-          @include mq('desktop'){
-            @include vr($line-height: 3);
-          }
-         
         }
-.copy__container{
-  @include mq('desktop'){
-  min-height: 10em;
-  flex: 0 1 auto;
-  display: flex;
-}
+
+      }
+
+      .copy__container {
+        @include mq('desktop') {
+          min-height: 10em;
+          flex: 0 1 auto;
+          display: flex;
+          max-width: 50%;
+        }
 
         .copy {
           @include copy__xs();
@@ -154,41 +190,52 @@
           @include mq('tablet') {
             @include copy__sm();
           }
-          @include mq('desktop'){
+
+          @include mq('desktop') {
             @include vr($line-height: 3);
           }
-         
+
         }
       }
-    }
-      .flex-item__c{
+      .flex-item__b-1{
         display: flex;
         flex: 1 1 auto;
-        max-width: 100%;
-        @include vr($padding: 2);
-flex-wrap: wrap;
-        @include mq('tablet') {
-          @include vr($padding: 4 2 9 2);
-        width: 64%;
-        flex-wrap: nowrap;
-        }
-        @include mq('tablet-wide'){
-          max-width: 100%;
-          width: 100%;
-          flex: 0 1 auto;
-        }
-        @include mq('desktop'){
-          width: 83%;
-          justify-content: space-evenly;
-        }
+        flex-wrap: wrap;
+        width: 100%;
+        max--width: 100%;
 
-
-      .flex-item__c-1, .flex-item__c-2, .flex-item__c-3{
+      }
+      .flex-item__b-2{
         display: flex;
-flex: 1 1 100%;
-@include vr($margin-bottom: 5);
+        flex: 1;
+        flex-wrap: wrap;
+        width: 100%;
+        max--width: 100%;
+        justify-content: center;
+        align-content: center;
+      }
 
-        .headline{
+
+      .flex-item__b-2-1,
+      .flex-item__b-2-2,
+      .flex-item__b-2-3 {
+        display: flex;
+        flex: 1 1 100%;
+        @include vr($margin-bottom: 5);
+        @include mq('tablet') {
+          flex: 1 1 38%;
+          max-width: 38%;
+          width: unset;
+          @include vr($padding: 0 2%);
+
+        }
+        @include mq('desktop') {
+          margin-bottom: 0;
+          max-width: 30%;
+          padding: 0 4%;
+        }
+
+        .headline {
           @include vr($margin-bottom: 1, $font-size: 1);
           text-transform: uppercase;
           @include ultra();
@@ -196,37 +243,115 @@ flex: 1 1 100%;
           // color: $accent;
 
         }
-        .blurb{
+
+        .blurb {
           @include xs__copy();
           @include vr($margin-bottom: 2);
           font-weight: 200;
         }
-        .copy{
+
+        .copy {
           @include xs__copy();
           font-weight: 200;
           @include vr($margin-bottom: .5);
-          @include vr($padding: 0 0, $line-height: .75);
+          @include vr($padding: 0 0, $line-height:2);
 
-          span{
+          span {
             @include xs__copy();
             font-weight: 600;
-            @include vr($line-height: .75, $padding-right: .25);
+            @include vr($line-height: 2, $padding-right: .25);
             letter-spacing: .05rem;
             // color: $accent;
           }
+        @include mq('desktop'){
+          max-width: 90%;
+        }
         }
 
-      @include mq('tablet'){
-        flex: 1 1 38%;
-        max-width: 38%;
-        width: unset;
-        @include vr($padding: 0 2%);
-      
+        
       }
-      }
+    }
+
+    .flex-item__c {
+      display: none;
+      // flex: 1 1 auto;
+      // max-width: 100%;
+      // @include vr($padding: 2);
+      // flex-wrap: wrap;
+
+      // @include mq('tablet') {
+      //   @include vr($padding: 4 2 9 2);
+      //   width: 64%;
+      //   flex-wrap: nowrap;
+      // }
+
+      // @include mq('tablet-wide') {
+      //   max-width: 100%;
+      //   width: 100%;
+      //   flex: 0 1 auto;
+      // }
+
+      // @include mq('desktop') {
+      //   width: 83%;
+      //   justify-content: space-evenly;
+      //   @include vr($padding: 0 2);
+      //   height: 43em;
+      //   align-items: center;
+      // }
+
+
+      // .flex-item__c-1,
+      // .flex-item__c-2,
+      // .flex-item__c-3 {
+      //   display: flex;
+      //   flex: 1 1 100%;
+      //   @include vr($margin-bottom: 5);
+      //   @include mq('tablet') {
+      //     flex: 1 1 38%;
+      //     max-width: 38%;
+      //     width: unset;
+      //     @include vr($padding: 0 2%);
+
+      //   }
+      //   @include mq('desktop') {
+      //     margin-bottom: 0;
+      //     max-width: 24%;
+      //   }
+
+      //   .headline {
+      //     @include vr($margin-bottom: 1, $font-size: 1);
+      //     text-transform: uppercase;
+      //     @include ultra();
+      //     letter-spacing: 0;
+      //     // color: $accent;
+
+      //   }
+
+      //   .blurb {
+      //     @include xs__copy();
+      //     @include vr($margin-bottom: 2);
+      //     font-weight: 200;
+      //   }
+
+      //   .copy {
+      //     @include xs__copy();
+      //     font-weight: 200;
+      //     @include vr($margin-bottom: .5);
+      //     @include vr($padding: 0 0, $line-height: .75);
+
+      //     span {
+      //       @include xs__copy();
+      //       font-weight: 600;
+      //       @include vr($line-height: .75, $padding-right: .25);
+      //       letter-spacing: .05rem;
+      //       // color: $accent;
+      //     }
+      //   @include mq('desktop'){
+      //     max-width: 90%;
+      //   }
+      //   }
+
+        
       }
     }
   }
-
-
-
